rbac/disallow-wildcard-verbs/.chainsaw-test/invalid-role-wildcard-verb.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: test-invalid-role-wildcard-verb
rules:
  - apiGroups: [""]
    resources: ["pods"]
    verbs: ["*"]
