rbac/disallow-wildcard-verbs/.chainsaw-test/invalid-wildcard-resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: test-invalid-wildcard-resource
rules:
  - apiGroups: [""]
    resources: ["*"]
    verbs: ["get", "list"]
